tests/fixtures/invalid/pointer_bitwise_compound_assignment.c
int main() {
    int value = 1;
    int *p = &value;
    return p &= 1;
}
